Clean up PreferenceData a bit